# sequence_db

./: .gitignore  README.md  _dna.json  _metadata.json  sequence_catalog.json  setup.cfg
example/: example_metadata.txt  example_mutated.fna  example_reference.fa  example_urease.fasta  mutated.fa  reference.fa
example/sample_fastas/: GCF_000007725.1_ASM772v1_rna_from_genomic.fasta  GCF_000008865.2_ASM886v2_rna_from_genomic.fasta  GCF_000010505.1_ASM1050v1_cds_from_genomic.fasta  GCF_000010505.1_ASM1050v1_rna_from_genomic.fasta  GCF_000012885.1_ASM1288v1_cds_from_genomic.fasta  GCF_000012885.1_ASM1288v1_rna_from_genomic.fasta
file_format/: _genome.json  _peptide.json  _rna.json
src/sequencedb/: catalog.py  command.py  db.py  extract.py  meta.py  query.py
tests/: test_catalog.py  test_command.py  test_extract.py
