[metadata]
name = sequencedb-biocode-review
version = 0.0.1
author = Scott Daniel
author_email = scottdaniel25@gmail.com
description = Manage a small DNA/protein sequence database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottdaniel/sequence_db
project_urls =
    Bug Tracker = https://github.com/scottdaniel/sequence_db/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sequence_db = sequencedb.command:main